<resources>
    <string name="app_name">Get It</string>
    <string name="Email">email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="node_users">users</string>

    <!--Shared Preferences-->
    <string name="preferences_state">preferences_state</string>
    <string name="preferences_city">preferences_city</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_search">Search</string>
    <string name="fragment_watch_list">Watch list</string>
    <string name="fragment_post">Post</string>
    <string name="fragment_account">Account</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="choose_photo_from_memory">Choose photo from memory</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="dialog_select_photo">SelectPhoto</string>
    <string name="node_post">posts</string>
    <string name="title_activity_drawer">DrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
