<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.eets_nostredame.getit.account.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:id="@+id/logo"/>
        <EditText
            android:paddingStart="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmail"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"/>
        <EditText
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_password"
            android:hint="@string/password"
            android:layout_marginTop="15dp"
            />
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:text="@string/login"
            android:background="@drawable/white_onclick_grey"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:text="@string/register"
            android:gravity="center"
            android:textSize="16dp"
            android:id="@+id/link_register"
            android:textColor="@color/blue5"
            />

        <TextView
            android:layout_margin="6dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="I put the share button below so that i can send you the app easily"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/share_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:fabSize="normal"
            app:rippleColor="@color/White"
            app:srcCompat="?attr/actionModeShareDrawable" />

    </LinearLayout>

    <ProgressBar
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:id="@+id/progressBar"/>

</RelativeLayout>
